fixed spacing on smaller screens and added more media queries

--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -25,6 +25,7 @@
 
             i {
                font-size: 3rem;
+               transition: all 0.2s ease-in 0s;
             }
 
             i:hover,
